Implemented quoting for Double Quotes